--- a/src/app/mission/space-card.component.html
+++ b/src/app/mission/space-card.component.html
@@ -7,7 +7,7 @@
     <div style="display: flex;flex-direction: column">
       <div style="font-weight: bolder;margin-top: 1rem
 ">
-        <span>{{missionName}} # {{flightNumber}}</span>
+        <span style="color: cornflowerblue">{{missionName}} # {{flightNumber}}</span>
       </div>
       <div style="margin-top: 1rem;">
         <span style="font-weight: bolder;">Mission Ids: </span>
