--- a/src/app/mission/mission.component.html
+++ b/src/app/mission/mission.component.html
@@ -6,7 +6,14 @@
     </div>
     <div class="body-wrapper_space">
       <app-space-card class="body-wrapper_space-card"
-                      *ngFor="let a of [1,2,3,4,5]"
+                      *ngFor="let mission of _mission"
+                      [missionName]="mission.missionName"
+                      [flightNumber]="mission.flightNumber"
+                      [missionIds]="mission.missionId"
+                      [launchYear]="mission.launchYear"
+                      [SuccessfulLaunch]="mission.launchSuccess"
+                      [SuccessfulLand]="mission.landSuccess"
+                      [imgUrl]="mission.imgUrl"
       ></app-space-card>
     </div>
   </div>
