--- a/src/app/mission/space-card.component.html
+++ b/src/app/mission/space-card.component.html
@@ -2,7 +2,8 @@
   <div class="space-card__wrapper">
     <div>
       <img class="space-card__wrapper-image"
-           src="https://images2.imgbox.com/a0/cb/s1h2RuR0_o.png">
+           [src]="imgUrl"
+      >
     </div>
     <div class="space-card__wrapper">
       <div class="space-card__wrapper-text">
