--- a/src/app/mission/mission.component.html
+++ b/src/app/mission/mission.component.html
@@ -3,6 +3,7 @@
   <div class="body-wrapper__wrapper">
     <div class="body-wrapper_filter">
       <app-space-filter (filterChange)="_onFilterChange($event)"
+                        [filter]="_filter"
       ></app-space-filter>
     </div>
     <div class="body-wrapper_space">
