--- a/src/app/mission/space-filter.component.html
+++ b/src/app/mission/space-filter.component.html
@@ -1,5 +1,5 @@
 <div class="space-filter__wrapper">
-  <h3 class="space-filter__title">Filter</h3>
+  <h3 class="space-filter__title">Filters</h3>
   <div class="space-filter__body-wrapper">
     <input type="search" placeholder="Launch Year" maxlength="4" [(ngModel)]="_launchYear">
     <div class="space-filter__body-wrapper-wrap">
