--- a/src/app/mission/mission.component.less
+++ b/src/app/mission/mission.component.less
@@ -7,16 +7,52 @@
   &__wrapper {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
   }
 
   &_filter {
-    width: 20%
+    width: 20%;
   }
 
   &_space {
     width: 77%;
     display: flex;
     flex-wrap: wrap;
+    @media only screen and (max-width: 1430px) {//1357 + 70
+      width: 74%;
+    }
+
+    @media only screen and (max-width: 1300px) {//1220 + 70
+      width: 70%;
+    }
+
+    @media only screen and (max-width: 1120px) {//1050 + 70
+      width: 67%;
+    }
+
+    @media only screen and (max-width: 1040px) {//968 + 70
+      width: 64%;
+    }
+
+    @media only screen and (max-width: 850px) {//775 + 70
+      width: 60%;
+    }
+
+    @media only screen and (max-width: 750px) {//687 + 70
+      width: 57%;
+    }
+
+    @media only screen and (max-width: 700px) {//635 + 70
+      width: 53%;
+    }
+
+    @media only screen and (max-width: 650px) {//590 + 70
+      width: 50%;
+    }
+
+    @media only screen and (max-width: 550px) {//550 + 70
+      width: 100%;
+    }
 
     &-card {
       margin: 0 0.8rem 0.8rem 1rem;
