--- a/src/app/mission/space-filter.component.less
+++ b/src/app/mission/space-filter.component.less
@@ -1,10 +1,16 @@
 @import "../../assets/colors";
 
 .space-filter {
+
   &__wrapper {
     padding: 20px;
-    width: 17rem;
+    width: 16.7rem;
     background: @backgroud-color-white;
+
+    @media only screen and (max-width: 1040px) {//968 + 70
+      padding: 20px 0 0 0;
+    }
+
   }
 
   &__title {
