--- a/src/app/mission/mission.component.html
+++ b/src/app/mission/mission.component.html
@@ -1,7 +1,7 @@
 <div class="body-wrapper">
   <div><h1>SpaceX Launch Program</h1></div>
   <div class="body-wrapper__wrapper">
-    <div class="body-wrapper_filter" style="background-color: #239123;">
+    <div class="body-wrapper_filter">
       <div style="width: 100%">
         <app-space-filter (filterChange)="_onFilterChange($event)"
                           [filter]="_filter"
